--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   <title>uffdah</title>
   <script src="/usr/palm/frameworks/mojo/mojo.js" type="text/javascript" x-mojo-version="1" />
   <link href="stylesheets/uffdah.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="stylesheets/preware.css" media="screen" rel="stylesheet" type="text/css" />
+<link href="stylesheets/preware-device.css" media="screen" rel="stylesheet" type="text/css" />
 </head>
 </html>
