--- a/enyo.html
+++ b/enyo.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
 <head>
-  <title>Hello Enjo!</title>
+  <title>Hello Enyo!</title>
   <script src="../../enyo/1.0/framework/enyo.js" type="text/javascript"></script>
 </head>
 <body>
 <script type="text/javascript">
   new Hello.Main();
-  enyo.windows.activate("hello.html", "main", {});
+  enyo.windows.activate("uffdah.html", "main", {});
   enyo.application = {
     applicationRelaunchHandler: function(params) {
-      enyo.windows.activate("hello.html", "main", {});
+      enyo.windows.activate("uffdah.html", "main", {});
     }
   };
 </script>
